--- a/config/database.yml
+++ b/config/database.yml
@@ -3,11 +3,23 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
-development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+#development:
+#  adapter: sqlite3
+#  database: db/development.sqlite3
+#  pool: 5
+#  timeout: 5000
+
+  development:
+    adapter: mysql2
+    encoding: utf8
+    username: ohad
+    pool: 5
+    password: userroot
+    database: fiverr
+    host: 127.0.0.1
+    port: 3306
+    socket: /tmp/mysql.sock
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
