--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,10 +1,14 @@
 ---
+Leather-Background-iPad.jpg: Leather-Background-iPad-659db8613b15505dd586a293769bdaab.jpg
+Leather-Background-iPad/index.jpg: Leather-Background-iPad-659db8613b15505dd586a293769bdaab.jpg
+coolbg.jpg: coolbg-0c730de4bbcc3781088cd48e8cc3b131.jpg
+coolbg/index.jpg: coolbg-0c730de4bbcc3781088cd48e8cc3b131.jpg
 rails.png: rails-e19cc14e7b458337c25b4a0b230d6cac.png
 rails/index.png: rails-e19cc14e7b458337c25b4a0b230d6cac.png
-application.js: application-541514afd47c736626a65c817edc82aa.js
-application/index.js: application-541514afd47c736626a65c817edc82aa.js
-application.css: application-63c5f10f8d4754bd738193dddf58eaca.css
-application/index.css: application-63c5f10f8d4754bd738193dddf58eaca.css
+application.js: application-14e3dc5612ffc200db37e141e57c5af2.js
+application/index.js: application-14e3dc5612ffc200db37e141e57c5af2.js
+application.css: application-415468c1b76846bfdfe9fea83761e7a8.css
+application/index.css: application-415468c1b76846bfdfe9fea83761e7a8.css
 fontawesome-webfont.eot: fontawesome-webfont-5f9bf001d945baa3287193f70ac71c68.eot
 fontawesome-webfont/index.eot: fontawesome-webfont-5f9bf001d945baa3287193f70ac71c68.eot
 fontawesome-webfont.svg: fontawesome-webfont-9c8b49b9721b8663e25842f77bd78bd9.svg
