add iphone instructions

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -3,12 +3,14 @@ Leather-Background-iPad.jpg: Leather-Background-iPad-06f25699d4de90e06e28f07f2c3
 Leather-Background-iPad/index.jpg: Leather-Background-iPad-06f25699d4de90e06e28f07f2c3ded28.jpg
 coolbg.jpg: coolbg-ea126faa03c70f4aeb6be76c57faed8e.jpg
 coolbg/index.jpg: coolbg-ea126faa03c70f4aeb6be76c57faed8e.jpg
+iphone-camera-landscape.jpg: iphone-camera-landscape-d1a56390fd2b242bf9f76f88eb6422c1.jpg
+iphone-camera-landscape/index.jpg: iphone-camera-landscape-d1a56390fd2b242bf9f76f88eb6422c1.jpg
 rails.png: rails-e64b08839bf720b38363dc79bb871ef3.png
 rails/index.png: rails-e64b08839bf720b38363dc79bb871ef3.png
 application.js: application-ce0a46a0d407091a6a93f65ec7fc828c.js
 application/index.js: application-ce0a46a0d407091a6a93f65ec7fc828c.js
-application.css: application-56f83d1f1914089a2140cbfabba933de.css
-application/index.css: application-56f83d1f1914089a2140cbfabba933de.css
+application.css: application-7cf74cf99c043e7d1e16d0781d8e1098.css
+application/index.css: application-7cf74cf99c043e7d1e16d0781d8e1098.css
 fontawesome-webfont.eot: fontawesome-webfont-551dba211164dac862f21ee87edb80a3.eot
 fontawesome-webfont/index.eot: fontawesome-webfont-551dba211164dac862f21ee87edb80a3.eot
 fontawesome-webfont.svg: fontawesome-webfont-b81b997b66e3df23044b4a9fb234150e.svg
